--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
 
     {% for path in page_paths %}
     {% assign my_page = site.pages | where: "path", path | first %}
-    {% if my_page.title != 'Page not found' %}
+    {% if my_page.title != 'Page not found' and my_page.title != nil %}
     <li class="menu-item">
       <a href="{{ my_page.url | relative_url }}" itemprop="url">
         <span itemprop="name">{{ my_page.title | escape }}</span>
