--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -10,7 +10,7 @@
   min-height: 100vh;
   position: relative;
   transform: translateX(0);
-  transition: $global-transition;
+  transition: transform 0.4s ease;
   width: 100%;
   z-index: 100;
 
