--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <div class="sidebar-toggle-wrapper">
       <button class="toggle navicon-button larr" type="button">
         <span class="toggle-inner">
-          <span class="sidebar-toggle-label visually-hidden">Menu}</span>
+          <span class="sidebar-toggle-label visually-hidden">Menu</span>
           <span class="navicon"></span>
         </span>
       </button>
