--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 <article class="entry">
-  <header class="entry-header">
+  <div class="entry-header">
     <h3 class="entry-title">
       <a href="{{ post.url | relative_url }}" rel="bookmark">{{ title }}</a>
     </h3>
@@ -13,8 +13,8 @@
       {% assign entry_image = post.image.thumbnail | relative_url | escape %}
       <img class="entry-image u-photo" src="{{ entry_image }}" alt="">
     {% endif %}
-  </header>
-  <footer class="entry-meta">
+  </div>
+  <div class="entry-meta">
     <ul>
     {% if post.date %}
       <li><span class="icon">{% include icon-calendar.svg %}</span><time class="entry-time" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time></li>
@@ -23,7 +23,7 @@
       <li><span class="icon">{% include icon-stopwatch.svg %}</span>{% capture read_time %}{% include read-time.html %}{% endcapture %}{{ read_time | strip }}</li>
     {% endif %}
     </ul>
-  </footer>
+  </div>
   <div class="entry-excerpt">
     {% if post.excerpt %}
       {{ post.excerpt | markdownify }}
